--- a/products.html
+++ b/products.html
@@ -1,22 +1,33 @@
-<section class="products">
-  <h2>منتجات تقليدية للبيع</h2>
-  <div class="product-grid">
-    <div class="product-card">
-      <img src="images/product1.jpg" alt="قندورة تقليدية" />
-      <h3>قندورة وهرانية</h3>
-      <p>لباس تقليدي مطرز يدويًا</p>
-      <span class="price">السعر: 7500 دج</span>
-    </div>
-    <div class="product-card">
-      <img src="images/product2.jpg" alt="فخار أمازيغي" />
-      <h3>فخار أمازيغي</h3>
-      <p>تحفة يدوية من جبال الأوراس</p>
-      <span class="price">السعر: 3200 دج</span>
-    </div>
-    <!-- يمكنك إضافة المزيد من البطاقات -->
-  </div>
+<!-- about.html -->
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>حول الموقع</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="products.html">المنتجات</a></li>
+        <li><a href="about.html">حول</a></li>
+        <li><a href="contact.html">اتصل بنا</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="add-product">
-    <button onclick="alert('ميزة قيد التطوير')">➕ أضف منتجك</button>
-  </div>
-</section>
+  <section class="about">
+    <h2>من نحن؟</h2>
+    <p>
+      HM-Shop هو متجر إلكتروني جزائري يهتم بترويج وبيع المنتجات التقليدية والتراثية من جميع أنحاء الوطن، ويهدف إلى دعم الحرفيين المحليين والمحافظة على التراث الثقافي.
+    </p>
+  </section>
+
+  <footer>
+    <p>جميع الحقوق محفوظة &copy; 2025 - HM-Shop</p>
+  </footer>
+</body>
+</html>
